src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Annual_Enrollments_per_Seat__c</fullName>
        <label>Annual Enrollments per Seat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Price_per_Enrollment_Old__c</fullName>
        <inlineHelpText>Annual Price per Enrollment</inlineHelpText>
        <label>Annual Price per Enrollment_old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HasQuoteSyncStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is being used to update the Quote Line Item record once Quote has Started Sync. That way the Process to update custom quote fields on opportunity fields will get triggered.</description>
        <inlineHelpText>for automatic process purpose</inlineHelpText>
        <label>HasQuoteSyncStarted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Enrollments_Old__c</fullName>
        <label>Number of Enrollments_Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem__c</fullName>
        <description>Refers to the corresponding Opportunity Line Item Id.</description>
        <formula>OpportunityLineItem.X18_Digit_Line_Item_Id__c</formula>
        <inlineHelpText>Refers to the corresponding Opportunity Line Item Id.</inlineHelpText>
        <label>OpportunityLineItem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_LI_Annual_Price_Enrollment__c</fullName>
        <formula>OpportunityLineItem.Annual_Price_per_Enrollment_Old__c</formula>
        <label>Opportunity LI Annual Price/Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_LI_Number_of_Enrollments__c</fullName>
        <formula>OpportunityLineItem.Number_of_Enrollments_Old__c</formula>
        <inlineHelpText>Opportunity Line Item: Number of Enrollments</inlineHelpText>
        <label>Opportunity LI Number of Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>